# azure-architecture-categoriser-

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  Dockerfile  Modernisation_Options.csv  README.md  architecture-catalog.json  docker-compose.yml  docker-entrypoint.sh  e2e_variety_report.md  pyproject.toml  state.md  worklog.md
.streamlit/: config.toml
Assistant/: .gitignore  README.md
Assistant/services/agents/: .gitignore  ARCHITECTURE_RECOMMENDATION.md  README.md  config.example.toml  config.infra-dev.toml  config.infra-prod.toml  endpoints.json  pyproject.toml
Assistant/services/agents/agents/: __init__.py  __main__.py  app_logging.py  auxiliary.py  exceptions.py  server.py
Assistant/services/agents/agents/ag_ui/: __init__.py  adapter.py  app.py
Assistant/services/agents/agents/config/: __init__.py  llm_integration.py  postgres.py  sqlserver.py  vault.py
Assistant/services/agents/agents/config/llm_router/: MODULE_DESIGN.md  __init__.py  logger.py  pyproject.toml  router.py
Assistant/services/agents/agents/config/llm_router/auth/: __init__.py  aws.py  azure.py  base.py  error_parser.py  factory.py  gcp.py  local.py  types.py
Assistant/services/agents/agents/config/llm_router/clients/: factory.py  native.py  pydantic_ai.py  refreshable_bedrock.py
Assistant/services/agents/agents/config/llm_router/core/: __init__.py  config.py  constants.py  endpoints.py  environment.py  identity.py  imds_client.py  loader.py  location.py  schema.py
Assistant/services/agents/agents/personas/: __init__.py  _agent_template.py  core.py  financial_planner.py  migration_engineer.py  network_specialist.py  project_manager.py  system_architect.py
Assistant/services/agents/agents/prompts/: __init__.py  prompts.py  templates.py
Assistant/services/agents/agents/prompts/core/: DATA.md  ROLE.md  STYLE.md  TOOLS.md
Assistant/services/agents/agents/prompts/core/gemini/: STYLE.md
Assistant/services/agents/agents/prompts/financial_planner/: RESPONSIBILITIES.md  ROLE.md
Assistant/services/agents/agents/prompts/migration_engineer/: RESPONSIBILITIES.md  ROLE.md
Assistant/services/agents/agents/prompts/network_specialist/: RESPONSIBILITIES.md  ROLE.md
Assistant/services/agents/agents/prompts/project_manager/: RESPONSIBILITIES.md  ROLE.md
Assistant/services/agents/agents/prompts/system_architect/: RESPONSIBILITIES.md  ROLE.md  TOOLS.md
Assistant/services/agents/agents/prompts/templates/: application_summary.md  migration_summary.md
Assistant/services/agents/agents/telemetry/: README.md  __init__.py  azure_blob_writer.py  otel.py  usage.py
Assistant/services/agents/agents/tools/: __init__.py  architecture_mapper.py  architecture_tools.py  common_tools.py
Assistant/services/agents/agents/tools/db_tools/: __init__.py  charts.py
docs/: _config.yml  architecture-scorer.md  azure-deployment.md  blob-storage-upload.md  catalog-builder.md  configuration.md  drmigrate-integration.md  getting-started.md  index.md  recommendations-app.md  securityaudit.md
infra/: main.bicep
prompt2_context_examples/: 01-java-refactor-aks.json  02-dotnet-replatform-appservice.json  03-legacy-tolerate.json  04-mixed-java-dotnet-partial-appmod.json  05-java-replatform-partial-appmod-missing-compat.json  06-dotnet-conflicting-signals-appmod-overrides.json  07-greenfield-cloud-native-perfect.json  08-enterprise-java-aks-curated.json  09-rehost-vm-lift-shift.json  10-retire-end-of-life.json  11-replace-saas-crm.json  12-retain-hybrid-on-premises.json  13-highly-regulated-healthcare.json  14-multi-region-active-active.json  15-traditional-it-erp.json  16-sre-mission-critical.json  17-cost-minimized-startup.json  18-innovation-first-ai-ml.json  19-appmod-blockers-mainframe.json  20-eliminate-time-category.json  21-low-complexity-3tier-dotnet.json  22-medium-complexity-java-multi-env.json  23-high-complexity-dotnet-ha-dr.json  24-very-high-complexity-java-enterprise.json  25-extra-high-complexity-mixed-enterprise.json  Example_Java_context_file (1).json
prompts/: architecture-scorer-prompt-v1.md  catalog-builder-prompt-v1.md
python/: AppCatContextFilerCreator.ps1  app_complexity_rater.py
tests/: README.md  (+9 more)
(+98 files in other folders)
