[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-architecture-catalog-builder"
version = "2.0.0"
description = "CLI tools for building and scoring Azure architecture catalogs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Adam Brown" }
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
gui = [
    "streamlit>=1.30.0",
]
recommendations-app = [
    "streamlit>=1.30.0",
    "reportlab>=4.0.0",
    "requests>=2.28.0",
    "svglib>=1.5.0",
]
azure = [
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
]

[project.scripts]
catalog-builder = "catalog_builder.cli:main"
architecture-scorer = "architecture_scorer.cli:main"
catalog-builder-gui = "catalog_builder_gui.app:main"
architecture-recommendations = "architecture_recommendations_app.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/catalog_builder", "src/architecture_scorer", "src/catalog_builder_gui", "src/architecture_recommendations_app"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
